--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
-    "start": "cross-env NODE_ENV=production netlify dev"
+    "dev": "remix dev"
   },
   "dependencies": {
-    "@netlify/functions": "^1.3.0",
-    "@remix-run/netlify": "^1.7.6",
     "@remix-run/node": "^1.7.6",
     "@remix-run/react": "^1.7.6",
-    "cross-env": "^7.0.3",
+    "@remix-run/vercel": "^1.7.6",
+    "@vercel/node": "^2.6.2",
 	"isbot": "^3.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
